<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:visibility="visible"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/common_dp"
            android:src="@drawable/loodingfial"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/net_status_error"
            android:textColor="@color/noclick_yueri_text_color"
            android:textSize="@dimen/text_input_size"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/net_status_error_setting_or_loading"
            android:textColor="@color/noclick_yueri_text_color"
            android:textSize="@dimen/text_input_size"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_net_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/net_error_settting_selector"
                android:clickable="true"
                android:paddingBottom="8dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="8dp"
                android:text="@string/net_setting"
                android:textColor="@drawable/net_error_settting_textcolor_selector"
                android:textSize="@dimen/common_text_size"/>

            <TextView
                android:id="@+id/tv_reloading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/big_margin"
                android:background="@drawable/net_error_loading_selector"
                android:clickable="true"
                android:paddingBottom="8dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="8dp"
                android:text="@string/net_reloading"
                android:textColor="@drawable/net_error_loading_textcolor_selector"
                android:textSize="@dimen/common_text_size"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
