<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.md.jsyxzs_cn.zym_xs.fragments.TroublshootingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_start_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/repair_riqi_shape"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/little_padding"
                android:layout_marginTop="@dimen/little_padding"
                android:layout_marginBottom="@dimen/little_padding"
                android:src="@drawable/riqixuanze"/>

            <TextView
                android:id="@+id/tv_start_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="end"
                android:gravity="center"
                android:text="2016-12-28"
                android:textColor="@color/deep_text_color"
                android:lines="1"
                android:textSize="@dimen/middle_dp"/>

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/little_padding"
                android:src="@drawable/xuanzejiantou"/>
        </LinearLayout>

        <View
            android:layout_width="10dp"
            android:layout_height="3dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/little_padding"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/ll_end_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/repair_riqi_shape"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="@dimen/little_padding"
                android:layout_marginTop="@dimen/little_padding"
                android:layout_marginBottom="@dimen/little_padding"
                android:src="@drawable/riqixuanze"/>

            <TextView
                android:id="@+id/tv_end_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:ellipsize="end"
                android:text="2016-12-28"
                android:lines="1"
                android:textColor="@color/deep_text_color"
                android:textSize="@dimen/middle_dp"/>

            <ImageView
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/little_padding"
                android:src="@drawable/xuanzejiantou"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/iv_seek"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:src="@drawable/fandajing"/>

        <ImageView
            android:id="@+id/iv_add_repair_list"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/tianjia"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_repair_time_choose"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            style="@style/repairTimeChoose"
            android:background="@color/colorPrimary"
            android:text="@string/all"
            android:textColor="@color/white"/>

        <TextView
            style="@style/repairTimeChoose"
            android:text="@string/today"/>

        <TextView
            style="@style/repairTimeChoose"
            android:text="@string/yesterday"/>

        <TextView
            style="@style/repairTimeChoose"
            android:text="@string/thisweek"/>

        <TextView
            style="@style/repairTimeChoose"
            android:text="@string/superweek"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_repair_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tv_repair_list_error_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/wujilu"
            android:text="@string/gzbx_no_repair_list"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="invisible"/>
        <com.md.jsyxzs_cn.zym_xs.custom_views.RotateLoading
            android:id="@+id/rotateloading"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            app:loading_color="@color/colorPrimaryDark"
            app:loading_speed="11"
            app:loading_width="5dp"/>
        <LinearLayout
            android:id="@+id/ll_net_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/common_dp"
                android:src="@drawable/loodingfial"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/noclick_yueri_text_color"
                android:textSize="@dimen/text_input_size"
                android:text="@string/net_status_error"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/noclick_yueri_text_color"
                android:textSize="@dimen/text_input_size"
                android:text="@string/net_status_error_setting_or_loading"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_net_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/net_setting"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="@dimen/common_text_size"
                    android:clickable="true"
                    android:textColor="@drawable/net_error_settting_textcolor_selector"
                    android:background="@drawable/net_error_settting_selector"/>
                <TextView
                    android:id="@+id/tv_reloading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/net_error_loading_selector"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_marginLeft="@dimen/big_margin"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textColor="@drawable/net_error_loading_textcolor_selector"
                    android:textSize="@dimen/common_text_size"
                    android:clickable="true"
                    android:text="@string/net_reloading"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
