<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/fragmentMarginStyle"
    tools:context="com.md.jsyxzs_cn.zym_xs.fragments.SystemMonitoringFragment">

<!--    &lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment3" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/cpu"
            android:contentDescription="@null"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/cpu_lyl_rl_margin_bottom"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpu_lyl_total_name"
                android:textColor="@color/xtjk_frag_cpu_lyl_total_name_color"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpu_lyl_total_value"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/cpu_lyl_total_value_color"/>
        </RelativeLayout>

        <com.md.jsyxzs_cn.zym_xs.custom_views.CPCRateView
            android:id="@+id/cpuRateView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cpu_lyl_rl_margin_bottom"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/cpu_current_lyl_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cpu_current_lyl_name"
                    android:textSize="@dimen/about_cpu_textSize"
                    android:textColor="@color/xtjk_frag_cpu_current_lyl_name_color"/>
                <TextView
                    android:id="@+id/cpu_current_lyl_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin_half"
                    android:layout_toRightOf="@id/cpu_current_lyl_name"
                    android:text="@string/cpu_current_lyl_value"
                    android:textSize="@dimen/about_cpu_textSize"
                    android:textColor="@color/xtjk_frag_cpu_current_lyl_value_color"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/xtjk_frag_diliver_bg_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/neicun"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/cpu_lyl_rl_margin_bottom"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xtjk_frag_jytsyl_total_name"
                android:textColor="@color/xtjk_frag_cpu_lyl_total_name_color"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>
            <TextView
                android:id="@+id/xtjk__frag_jytsyl_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xtjk__frag_jytsyl_total_value"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/cpu_lyl_total_value_color"/>
        </RelativeLayout>
        <com.md.jsyxzs_cn.zym_xs.custom_views.MemoryUtilizationView
            android:id="@+id/memoryUtilizationView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cpu_lyl_rl_margin_bottom">
            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_marginRight="20dp"
                android:layout_alignLeft="@+id/rl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/xtjk_frag_jytsyl_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xtjk_frag_jytsyl_name"
                    android:textSize="@dimen/about_cpu_textSize"
                    android:textColor="@color/xtjk_frag_cpu_current_lyl_name_color"/>
                <TextView
                    android:id="@+id/xtjk_frag_jytsyl_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xtjk_frag_jytsyl_value_marginLeft"
                    android:layout_toRightOf="@id/xtjk_frag_jytsyl_name"
                    android:text="@string/cpu_current_lyl_value"
                    android:textSize="@dimen/about_cpu_textSize"
                    android:textColor="@color/xtjk_frag_cpu_current_lyl_value_color"/>
            </RelativeLayout>
            <LinearLayout
                android:id="@+id/rl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/xtjk_frag_ysy_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xtjk_frag_ysy_name"
                    android:textSize="@dimen/about_cpu_textSize"
                    android:textColor="@color/xtjk_frag_cpu_current_lyl_name_color"/>
                <TextView
                    android:id="@+id/xtjk_frag_ysy_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xtjk_frag_jytsyl_value_marginLeft"
                    android:text="@string/cpu_current_lyl_value"
                    android:textSize="@dimen/about_cpu_textSize"
                    android:textColor="@color/xtjk_frag_cpu_current_lyl_value_color"/>

                <TextView
                    android:id="@+id/xtjk_frag_ky_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/cpu_lyl_rl_margin_bottom"
                    android:text="@string/xtjk_frag_ky_name"
                    android:textSize="@dimen/about_cpu_textSize"
                    android:textColor="@color/xtjk_frag_cpu_current_lyl_name_color"/>

                <TextView
                    android:id="@+id/xtjk_frag_ky_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/xtjk_frag_jytsyl_value_marginLeft"
                    android:text="@string/cpu_current_lyl_value"
                    android:textSize="@dimen/about_cpu_textSize"
                    android:textColor="@color/xtjk_frag_cpu_current_lyl_value_color"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
