<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.md.jsyxzs_cn.zym_xs.MainActivity">

    <LinearLayout
        android:id="@+id/ll_dingbutubiao_mainAy"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">
        <ImageView
            android:id="@+id/iv_dingbutubiao_mainAy"
            style="@style/dingbutubiaoStyle"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/mainAy_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ll_dingbutubiao_mainAy"
        android:layout_above="@+id/mainAy_rg">
    </FrameLayout>

    <RadioGroup
        android:id="@id/mainAy_rg"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentBottom="true"
        android:background="@color/mainAy_rg_bg"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/mainAy_rb_xljc"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/mainAy_rb_xljc_text"
            android:textSize="12sp"
            android:drawableTop="@drawable/main_ay_rb_xljc_selector"
            android:textColor="@drawable/main_ay_rb_textcolor_selector"
            android:paddingTop="5dp"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/main_page_gzbx"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/mainAy_rb_gzbx_text"
            android:textSize="12sp"
            android:textColor="@drawable/main_ay_rb_textcolor_selector"
            android:drawableTop="@drawable/main_ay_rb_gzbx_selector"
            android:paddingTop="5dp"
            android:gravity="center"/>
        <RadioButton
            android:id="@+id/main_page_xtjk"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:button="@null"
            android:text="@string/mainAy_rb_xtjk_text"
            android:textSize="12sp"
            android:textColor="@drawable/main_ay_rb_textcolor_selector"
            android:drawableTop="@drawable/main_ay_rb_xtjk_selector"
            android:paddingTop="5dp"
            android:gravity="center"/>
    </RadioGroup>
</RelativeLayout>
